<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textColor="@color/back_text"
        />

    <Button
        android:id="@+id/newest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_added_newest"
        android:background="@color/back_item"
        android:gravity="start"
        android:padding="16dp"
        />

    <Button
        android:id="@+id/oldest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_added_oldest"
        android:background="@color/back_item"
        android:gravity="start"
        android:padding="16dp"/>
</LinearLayout>