<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_icon"
        android:text="@string/message"
        android:textSize="19sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="16dp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/mag_image"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/set"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="5_stars.json" />


    <Button
        android:id="@+id/set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/no"
        app:layout_constraintTop_toTopOf="@id/no"
        app:layout_constraintStart_toEndOf="@id/cancel"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="6dp"
        android:textStyle="bold"
        android:background="@drawable/bt_next"
        android:textColor="#fff"
        android:text="@string/rate_now"/>


    <Button
        android:visibility="gone"
        android:id="@+id/cancel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/no"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/card_back"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="@id/no"
        app:layout_constraintBottom_toBottomOf="@id/no"
        android:text="@string/exit"/>

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mag_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/card_back"
        android:layout_marginBottom="16dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_thanks"/>


</androidx.constraintlayout.widget.ConstraintLayout>